; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_sign.c_listGetCB.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_sign.c_listGetCB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctxGetListCB = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @listGetCB to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @listGetCB(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.ctxGetListCB*, align 8
  %9 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.ctxGetListCB*
  store %struct.ctxGetListCB* %11, %struct.ctxGetListCB** %8, align 8
  %12 = call i32* (...) @r_sign_item_new()
  store i32* %12, i32** %9, align 8
  %13 = load i32*, i32** %9, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %34

16:                                               ; preds = %3
  %17 = load %struct.ctxGetListCB*, %struct.ctxGetListCB** %8, align 8
  %18 = getelementptr inbounds %struct.ctxGetListCB, %struct.ctxGetListCB* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** %9, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 @r_sign_deserialize(i32 %19, i32* %20, i8* %21, i8* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %16
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @r_sign_item_free(i32* %26)
  store i32 0, i32* %4, align 4
  br label %34

28:                                               ; preds = %16
  %29 = load %struct.ctxGetListCB*, %struct.ctxGetListCB** %8, align 8
  %30 = getelementptr inbounds %struct.ctxGetListCB, %struct.ctxGetListCB* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32*, i32** %9, align 8
  %33 = call i32 @r_list_append(i32 %31, i32* %32)
  store i32 1, i32* %4, align 4
  br label %34

34:                                               ; preds = %28, %25, %15
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32* @r_sign_item_new(...) #1

declare dso_local i32 @r_sign_deserialize(i32, i32*, i8*, i8*) #1

declare dso_local i32 @r_sign_item_free(i32*) #1

declare dso_local i32 @r_list_append(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
